versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/install-docker.adoc
= Installing Docker
:revdate: 2024-09-24
:page-revdate: {revdate}

Docker is required to be installed on nodes where the Rancher server will be installed with Helm on an RKE cluster or with Docker. Docker is not required for RKE2 or K3s clusters.

There are a couple of options for installing Docker. One option is to refer to the https://docs.docker.com/install/[official Docker documentation] about how to install Docker on Linux. The steps will vary based on the Linux distribution.

Another option is to use one of Rancher's Docker installation scripts, which are available for most recent versions of Docker. Rancher has installation scripts for every version of upstream Docker that Kubernetes supports.

For example, this command could be used to install on one of the main Linux distributions, such as SUSE Linux Enterprise or Ubuntu:

[,bash]
----
curl https://releases.rancher.com/install-docker/<version-number>.sh | sh
----

Consult the https://www.suse.com/suse-rancher/support-matrix/all-supported-versions/rancher-v2-8-0/[Rancher support matrix] to match a validated Docker version with your operating system and version of Rancher. Although the support matrix lists validated Docker versions down to the patch version, only the major and minor version of the release are relevant for the Docker installation scripts.

Note that the following sysctl setting must be applied:

[,bash]
----
net.bridge.bridge-nf-call-iptables=1
----
